Fix for wrong size logo, damn you padding

--- a/sass/_theme_layout.sass
+++ b/sass/_theme_layout.sass
@@ -28,9 +28,7 @@
 .logo
   width: 190px
   height: 59px
-  margin-top: 5px
-  padding-top: 5px
-  padding-left: 5px
+  margin-top: 6px
 
 .wy-affix
   position: fixed
