--- a/sphinx_rtd_theme/static/css/theme.css
+++ b/sphinx_rtd_theme/static/css/theme.css
@@ -4223,9 +4223,7 @@ div[class^='highlight'] pre {
 .logo {
   width: 190px;
   height: 59px;
-  margin-top: 5px;
-  padding-top: 5px;
-  padding-left: 5px;
+  margin-top: 6px;
 }
 
 .wy-affix {
